--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@zeit/next-typescript": "1.1.0",
+    "dayjs": "^1.7.5",
     "next": "^6.1.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
