--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next -p 3232",
     "build": "next build",
     "start": "next start -p 3232",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export && npm run postexport",
+    "postexport": "cp .next/service-worker.js out"
   },
   "dependencies": {
     "@zeit/next-typescript": "1.1.0",
@@ -14,7 +15,8 @@
     "next": "^6.1.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "styled-components": "^3.4.6"
+    "styled-components": "^3.4.6",
+    "sw-precache-webpack-plugin": "^0.11.3"
   },
   "devDependencies": {
     "@types/next": "latest",
