--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@zeit/next-typescript": "1.1.0",
     "dayjs": "^1.7.5",
-    "next": "^6.1.2",
+    "fontfaceobserver": "^2.0.13",
+    "next": "^7.0.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "styled-components": "^3.4.6",
