--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^7.0.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-share": "^2.3.1",
     "styled-components": "^3.4.6",
     "sw-precache-webpack-plugin": "^0.11.3"
   },
